# QAmiensRCode

./: .gitignore  BitBuffer.cpp  BitBuffer.hpp  BitTampon.cpp  BitTampon.hpp  CMakeLists.txt  QAmiensRCode.cpp  QAmiensRCode.hpp  QAmiensRCode.xml  QAmiensRCode_main.cpp  QAmiensRSegment.cpp  QAmiensRSegment.hpp  QrSegment.cpp  QrSegment.hpp  README.md  main.cpp
